--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
+* {
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: #eeeeee;
+  max-height: 100vh;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-size: 18px !important;
+}
+
 .App {
+  text-align: center;
+  margin-top: 30%;
+}
+.flex-wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  padding-top: 2%;
+  width: 100%;
+  text-align: start;
+  justify-content: center;
+}
+
+#name {
+  width: 50%;
+  font-size: 1.6em;
+  font-weight: 600;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border: solid 0.1em #eeeeee;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  margin-left: 1%;
+  border-radius: 10px !important;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.button-list {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.quiz-input-button {
+  margin-top: 3%;
+}
+@media only screen and (min-width: 575px) {
+  .intro-button {
+    margin-left: 5px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 575px) {
+  .App {
+    margin-top: 30%;
+  }
+  #name {
+    width: 100%;
+    text-align: center;
+  }
+  button {
+    width: 100%;
+    margin-top: 3%;
+  }
+  .intro-button {
+    margin-top: 5px;
   }
 }
